sc2/src/uqm/rust_bridge_restart.h

// --- Game-state byte accessors (restart.c specific) ----------------------

BYTE uqm_get_utwig_bomb_on_ship (void);
void uqm_set_utwig_bomb_on_ship (BYTE v);
BYTE uqm_get_utwig_bomb (void);
// --- PlayerControl global ------------------------------------------------

void uqm_set_player_control (uint8_t player, COUNT control);
// --- Input state accessors -----------------------------------------------

// key_index must be one of KEY_MENU_SELECT, KEY_MENU_UP, etc. (controls.h)
BOOLEAN uqm_get_pulsed_menu_key (uint8_t key_index);
BOOLEAN uqm_get_mouse_button_down (void);
// --- Time globals --------------------------------------------------------

TimeCount uqm_get_time_counter (void);
void uqm_sleep_thread_until (TimeCount time);
void uqm_sleep_thread (TimeCount duration);
// --- GamePaused global ---------------------------------------------------

void uqm_set_game_paused (BOOLEAN val);
// --- Race queue reinit ---------------------------------------------------

void uqm_reinit_race_queues (void);
// --- Global array assignment (StartGame) ---------------------------------

void uqm_assign_star_planet_globals (void);
// --- Popup window --------------------------------------------------------

void uqm_do_popup_window_msg (COUNT string_id);
// --- MENU_STATE field accessor ---------------------------------------------

struct menu_state;
FRAME uqm_get_menu_cur_frame (struct menu_state *pMS);
void *uqm_get_menu_priv_data (struct menu_state *pMS);
void uqm_set_menu_flash_context (struct menu_state *pMS, FlashContext *ctx);
void uqm_set_menu_initialized (struct menu_state *pMS, SIZE val);
void uqm_set_menu_cur_state (struct menu_state *pMS, BYTE state);
void uqm_set_menu_cur_frame (struct menu_state *pMS, FRAME frame);
void uqm_set_menu_h_music (struct menu_state *pMS, MUSIC_REF handle);
struct menu_state *uqm_create_menu_state (void);
void uqm_set_menu_priv_data (struct menu_state *pMS, void *data);
void uqm_destroy_menu_state (struct menu_state *pMS);
// Sets MENU_STATE.InputFunc to the Rust trampoline. The Rust side must
// set pMS->privData before calling this.
struct menu_state;