sc2/src/libs/gfxlib.h

typedef struct Color Color;
struct Color {
	BYTE r;
	BYTE g;
	BYTE b;
	BYTE a;
};
typedef struct context_desc CONTEXT_DESC;
typedef struct frame_desc FRAME_DESC;
typedef struct drawable_desc DRAWABLE_DESC;
typedef CONTEXT_DESC *CONTEXT;
typedef FRAME_DESC *FRAME;
typedef DRAWABLE_DESC *DRAWABLE;
typedef SWORD COORD;
// Form 2, calculates '(r5 / 32.0) * 256.0, highest value is 0xf8:
//#define CC5TO8(c) ((c) << 3)

#define BUILD_COLOR(col, c256) col
#define MAKE_RGB15(r, g, b) colorFromRgb15 ((r), (g), (b))
#define MAKE_RGB15(r, g, b) (Color) { \
		.r = CC5TO8 (r), \
		.g = CC5TO8 (g), \
		.b = CC5TO8 (b), \
		.a = 0xff \
	}
typedef struct point
{
	COORD x, y;
} POINT;
typedef enum
{
	FadeAllToWhite = 250,
	FadeSomeToWhite,
	FadeAllToBlack,
	FadeAllToColor,
	FadeSomeToBlack,
	FadeSomeToColor
} ScreenFadeType;
extern CONTEXT SetContext (CONTEXT Context);
extern Color SetContextBackGroundColor (Color Color);
extern void BatchGraphics (void);
extern void UnbatchGraphics (void);
extern void ClearDrawable (void);
extern BOOLEAN DestroyDrawable (DRAWABLE Drawable);
extern void *LoadGraphicInstance (RESOURCE res);
extern FRAME SetAbsFrameIndex (FRAME Frame, COUNT FrameIndex);
extern FRAME CaptureDrawable (DRAWABLE Drawable);
extern DRAWABLE ReleaseDrawable (FRAME Frame);
extern DWORD FadeScreen (ScreenFadeType fadeType, SIZE TimeInterval);
extern void FlushColorXForms (void);