sc2/src/uqm/rust_bridge_mainloop.h

/* --- Activity accessors -------------------------------------------------- */
/* ACTIVITY is typedef'd to UWORD in globdata.h; using UWORD here
 * avoids a heavy include dependency for this bridge header. */

UWORD get_current_activity (void);
void set_current_activity (UWORD v);
void set_next_activity (UWORD v);
UWORD get_last_activity (void);
void set_last_activity (UWORD v);
/* GLOBAL_SIS (CrewEnlisted) as a COUNT (UWORD). */
COUNT uqm_get_crew_enlisted (void);
/* Sets the MainExited global to the given BOOLEAN value. */
void set_main_exited (BOOLEAN b);